# popsregression

./: ISSUE.md  POPSRegression.py  README.md  SimpleExample.ipynb  pyproject.toml
.github/workflows/: deploy-gh-pages.yml  lint.yml  publish.yml  python-app.yml
POPSRegression/: POPSRegression.py
doc/: conf.py  index.rst
examples/: plot_pops_regression.py
popsregression/tests/: test_pops.py
