[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "POPSRegression"
version = "0.3.6"
description = "Bayesian regression for low-noise data using POPS algorithm"
authors = [
    {name = "Thomas D Swinburne", email = "thomas.swinburne@cnrs.fr"},
    {name = "Danny Perez", email = "danny_perez@lanl.gov"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "scikit-learn>=1.6.1",
    "scipy>=1.6.0",
    "numpy>=1.20.0",
]
[project.urls]
"Homepage" = "https://github.com/tomswinburne/POPS-Regression"
"Bug Tracker" = "https://github.com/tomswinburne/POPS-Regression/issues"
"Documentation" = "https://github.com/tomswinburne/POPS-Regression/blob/main/README.md"

[tool.setuptools]
packages = ["POPSRegression"]

